Fix navbar logo size on mobile

--- a/src/components/Navbar/styles/Navbar.css
+++ b/src/components/Navbar/styles/Navbar.css
@@ -395,4 +395,7 @@
   .mega-column {
     display: none !important;
   }
+  .nav-logo-image {
+    height: 26px;
+  }
 }
